# email-classification-system

./: .gitignore  README.md  actionable_email.txt  app.py  config.py  emails_action.txt  emails_info.txt  informative_emails.txt  llm_email_processor.txt  main.py  pyproject.toml  testing.py
Screenshots/: README.md
